Title bars, blog post lists, consistent styling

--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -1,8 +1,18 @@
-<div class="cardItem">
-    <h2>{{ .Title }}</h2>
-    <div role="img" aria-label="{{ .Params.imagealt }}" style="height: 20rem; background-size: cover; background-image: url('/img/cds/{{ .Params.image }}')"></div>
-    <div class="article-date">{{ .Date.Format "Mon, Jan 2, 2006" }}</div>
-    <h3>{{ .Params.author }}</h3>
-    <p>{{ .Summary }}</p>
-    <a href="{{ .RelPermalink }}" class="post-summary-read-more">READ MORE</a>
-</div>
+<li class="post">
+    <div class="row">
+        <div class="col-xs-12 col-sm-4">
+            <div class="photo" role="img" aria-label='TODO' style="background-image: url('/img/cds/{{ .Params.image }}')"></div>
+        </div>
+        <div class="col-xs-12 col-sm-8">
+            <div class="text">
+                <div class="title"><a href="{{ .Params.url }}"><h2>{{ .Title }}</h2></a></div>
+                <div class="author">{{ .Params.author }}</div>
+            <div class="date">
+                TODO DATE
+            </div>
+                <div class="summary">{{ .Params.description }}</div>
+                <div class="readmore"><a href="{{ .Params.url }}" aria-label="Lire la suite de {{ .Params.title }}">Lire davantage</a></div>
+            </div>
+        </div>
+    </div>
+</li>
