--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -38,7 +38,7 @@
         <link rel="alternate" type="application/rss+xml" title="{{ i18n "canadian-digital-service" }}" href="/feed.xml" />
         <meta name="google-site-verification" content="sBa9o-9RVlIHHlyeaHgIir20ZKcSuzLVgCCeXIMgKZg" />
     </head>
-    <body vocab="http://schema.org/" typeof="WebPage" class="{{ .Params.ref }} {{ (string ( $.Site.Language) ) }}">
+    <body vocab="http://schema.org/" typeof="WebPage" class="{{ .Params.title }} {{ (string ( $.Site.Language) ) }}">
     <!-- Google Tag Manager DO NOT REMOVE OR MODIFY - NE PAS SUPPRIMER OU MODIFIER -->
     <noscript><iframe title="Google Tag Manager" src="//www.googletagmanager.com/ns.html?id=GTM-TLGQ9K" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer1'?'&l='+l:'';j.async=true;j.src='//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer1','GTM-TLGQ9K');</script>
@@ -54,7 +54,7 @@
     {{ end }}
 
     {{ block "menu" . }}
-    <nav role="navigation" id="wb-sm" data-trgt="mb-pnl" class="cds-menu" typeof="SiteNavigationElement">
+        <nav role="navigation" id="wb-sm" data-trgt="mb-pnl" class="cds-menu" typeof="SiteNavigationElement">
             <div class="container topbar" id="site--topbar">
                 <h2>{{ i18n "topics-menu" }}</h2>
                 <div class="row">
@@ -92,7 +92,30 @@
         </nav>
     {{ end }}
 
+    {{ block "title" . }}
+        <div class="page-banner" style="background-image:url('/img/cds/header-images/{{ .Params.image }}')">
+            <div class="page-banner--scrim"></div>
+            <div class="container">
+                <div class="page-banner--title">
+                    <h1>{{ i18n .Params.title }}</h1>
+                    {{ if .Params.subtitle }}
+                        <span class="page-title-sub">
+                            {{ .Params.subtitle }}
+                        </span>
+                    {{ end }}
+                </div>
+            </div>
+        </div>
+    </header>
+    {{ end }}
+
     {{ block "main" . }}
+
+    <main role="main" property="mainContentOfPage">
+        <section id="wb-cont">
+            {{ .Content }}
+        </section>
+
     {{ end }}
     
     {{ block "footer" . }}
