--- a/layouts/partials/mailing-list.en.html
+++ b/layouts/partials/mailing-list.en.html
@@ -7,14 +7,14 @@
         <form action="//canada.us15.list-manage.com/subscribe/post?u=729a207773f7324e217a1d945&amp;id=eb357181d2" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" novalidate>
             <div id="mc_embed_signup_scroll">
 
-                <div>
+                <div class="mc-field-group form-group">
                     <label for="mce-EMAIL">Email address </label>
-                    <input type="email" value="" name="EMAIL" id="mce-EMAIL">
+                    <input type="email" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL">
                 </div>
 
                 <div id="mce-responses">
-                    <div id="mce-error-response" style="display:none"></div>
-                    <div id="mce-success-response" style="display:none"></div>
+                    <div class="response" id="mce-error-response" style="display:none"></div>
+                    <div class="response" id="mce-success-response" style="display:none"></div>
                 </div>
 
                 <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
@@ -24,12 +24,12 @@
                     </label>
                 </div>
 
-                <div>
-                    <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" style="height: auto">
+                <div class="submit-button-container">
+                    <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button" style="height: auto">
                 </div>
 
                 <div class="mce-privacy" style="padding-top: 9px;">
-                    <a href="#privacy-notice-modal" aria-controls="privacy-notice-modal" aria-label="Privacy Statement Link">Privacy Notice</a>
+                    <a href="#privacy-notice-modal" aria-controls="privacy-notice-modal" class="overlay-lnk light-link wb-lbx" aria-label="Privacy Statement Link">Privacy Notice</a>
                 </div>
 
             </div>
@@ -38,11 +38,11 @@
     <!--End mc_embed_signup-->
 </div>
 
-<section id="privacy-notice-modal">
-    <header>
-        <h2>Privacy Notice</h2>
+<section class="mfp-hide modal-dialog modal-content overlay-def" id="privacy-notice-modal">
+    <header class="modal-header">
+        <h2 class="modal-title">Privacy Notice</h2>
     </header>
-    <div>
+    <div class="modal-body">
         <p>Our newsletter feature uses <a href="https://mailchimp.com/">Mailchimp</a>, a third-party application. Sign-up is voluntary and subject to the <a href="https://mailchimp.com/legal/terms/">Terms of Use</a> for the Mailchimp platform.  When you sign up, your email address and language preference (English or French) is collected. No other personal information is collected.</p>
 
         <p>The collection and use of your personal information is authorized by the <em>Financial Administration Act</em>. Collection and use of your personal information for this site is in accordance with the federal <em>Privacy Act</em>. Your personal information may be used to respond to your inquiries, if applicable, and to help evaluate the effectiveness of Treasury Board of Canada Secretariat (TBS) programs in responding to client needs. In exceptional circumstances (e.g., individuals who make inappropriate remarks or threats), personal information may be disclosed without your consent pursuant to subsection 8(2) of the <em>Privacy Act</em>.</p>
