--- a/layouts/partials/mailing-list.fr.html
+++ b/layouts/partials/mailing-list.fr.html
@@ -4,17 +4,17 @@
 
     <!-- Begin MailChimp Signup Form -->
     <div id="mc_embed_signup">
-        <form action="//canada.us15.list-manage.com/subscribe/post?u=729a207773f7324e217a1d945&amp;id=5fe89f4d28" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" novalidate>
+        <form action="//canada.us15.list-manage.com/subscribe/post?u=729a207773f7324e217a1d945&amp;id=5fe89f4d28" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" novalidate>
             <div id="mc_embed_signup_scroll">
 
-                <div>
+                <div class="mc-field-group form-group">
                     <label for="mce-EMAIL">Votre courriel </label>
-                    <input type="email" value="" name="EMAIL" id="mce-EMAIL">
+                    <input type="email" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL">
                 </div>
 
-                <div id="mce-responses">
-                    <div id="mce-error-response" style="display:none"></div>
-                    <div cid="mce-success-response" style="display:none"></div>
+                <div id="mce-responses" class="clear">
+                    <div class="response" id="mce-error-response" style="display:none"></div>
+                    <div class="response" id="mce-success-response" style="display:none"></div>
                 </div>
 
                 <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
@@ -24,12 +24,12 @@
                     </label>
                 </div>
 
-                <div>
-                    <input type="submit" value="Abonnez-vous" name="subscribe" id="mc-embedded-subscribe" style="height: auto">
+                <div class="submit-button-container">
+                    <input type="submit" value="Abonnez-vous" name="subscribe" id="mc-embedded-subscribe" class="button" style="height: auto">
                 </div>
 
-                <div style="padding-top: 9px;">
-                    <a href="#privacy-notice-modal" aria-controls="privacy-notice-modal" aria-label="Énoncé de confidentialité">Énoncé de confidentialité</a>
+                <div class="mce-privacy" style="padding-top: 9px;">
+                    <a href="#privacy-notice-modal" aria-controls="privacy-notice-modal" class="overlay-lnk light-link wb-lbx" aria-label="Énoncé de confidentialité">Énoncé de confidentialité</a>
                 </div>
 
             </div>
@@ -40,11 +40,12 @@
 
 </div>
 
-<section id="privacy-notice-modal">
-    <header>
-        <h2>Énoncé de confidentialité</h2>
+<section class="mfp-hide modal-dialog modal-content overlay-def" id="privacy-notice-modal">
+    <header class="modal-header">
+        <h2 class="modal-title">Énoncé de confidentialité</h2>
     </header>
-    <div>
+    <div class="modal-body">
+
         <p>Notre fonction Bulletin de nouvelles fait appel &agrave;&nbsp;<a href="https://mailchimp.com/">Mailchimp</a>, une application tierce.&nbsp;L&rsquo;adh&eacute;sion est libre et est assujettie aux&nbsp;<a href="https://mailchimp.com/legal/terms/">Conditions d&rsquo;utilisation</a>&nbsp;associ&eacute;es &agrave; la plateforme Mailchimp.&nbsp;&nbsp;Au moment de l&rsquo;adh&eacute;sion, le syst&egrave;me enregistre votre adresse &eacute;lectronique et votre langue de pr&eacute;f&eacute;rence (anglais ou fran&ccedil;ais).&nbsp;Aucun autre renseignement personnel n&rsquo;est recueilli.</p>
 
         <p>La collecte et l&rsquo;utilisation de vos renseignements personnels sont autoris&eacute;es par la&nbsp;<em>Loi sur la gestion des finances publiques</em>. La collecte et l&rsquo;utilisation de vos renseignements personnels aux fins du pr&eacute;sent site sont conformes &agrave; la&nbsp;<em>Loi f&eacute;d&eacute;rale sur la protection des renseignements personnels</em>. Vos&nbsp;renseignements personnels&nbsp;peuvent servir &agrave; r&eacute;pondre &agrave; vos demandes de renseignements, au besoin, et &agrave; &eacute;valuer l&rsquo;efficacit&eacute; avec laquelle les programmes du Secr&eacute;tariat du Conseil du Tr&eacute;sor&nbsp;(SCT)&nbsp;r&eacute;pondent aux besoins des clients. &nbsp;Dans des cas exceptionnels (p. ex., le cas de quelqu&rsquo;un qui fait des remarques inappropri&eacute;es ou des menaces), les renseignements personnels peuvent &ecirc;tre divulgu&eacute;s sans votre consentement conform&eacute;ment au paragraphe 8(2) de la&nbsp;<em>Loi sur la protection des renseignements personnels</em>.</p>
