--- a/layouts/section/work-with-us.en.html
+++ b/layouts/section/work-with-us.en.html
@@ -1,230 +1,43 @@
 {{ define "main" }}
-  <div class="container">
-        <section class="section work-with-us--intro page-intro--outer-container-padding">
-            <div class="row">
-                <div class="col-sm-10 col-sm-offset-1 col-xs-12">
-                    <h2 class="section--title">Join CDS</h2>
-                        {{ if gt (len (where .Pages ".Params.archived" "==" false)) 0 }}
-                            <div class="cell-background">
-                                <h4>Applications open for a limited time</h4>
-                                {{ if gt (len (where (where .Pages ".Params.archived" "==" false) ".Params.postingtype" "==" "senior-job-post")) 0 }}
-                                    <p style="margin-bottom: 0.5rem;">We’re looking to fill these senior positions as soon as possible:</p>    
-                                    <div class="row mrgn-tp-0">
-                                        <ul>
-                                            {{ range $p := (where (where .Pages ".Params.archived" "==" false) ".Params.postingtype" "==" "senior-job-post") }}
-                                                <li><a href={{ .RelPermalink }}>{{ .Title }}</a></li>
-                                            {{ end }}
-                                        </ul>
-                                    </div>
-                                {{ end }}
-                                {{ if gt (len (where (where .Pages ".Params.archived" "==" false) ".Params.postingtype" "==" "job-post")) 0 }}
-                                    <p style="margin-bottom: 0.5rem;">We’re looking to fill these positions as soon as possible:</p>   
-                                    <div class="row mrgn-tp-0">
-                                        <ul>
-                                            {{ range $p := (where (where .Pages ".Params.archived" "==" false) ".Params.postingtype" "==" "job-post") }}
-                                                <li><a href={{ .RelPermalink }}> {{ .Title }}</a></li>
-                                            {{ end }}
-                                        </ul>
-                                    </div>
-                                {{ end }}
+<div class="container">
+    <section class="section work-with-us--intro page-intro--outer-container-padding">
+        <div class="row">
+            <div class="col-sm-10 col-sm-offset-1 col-xs-12">
+                <h2 class="section--title">Join CDS</h2>
+                    {{ if gt (len (where .Pages ".Params.archived" "==" false)) 0 }}
+                        <div class="cell-background">
+                            <h4>Applications open for a limited time</h4>
+                            {{ if gt (len (where (where .Pages ".Params.archived" "==" false) ".Params.postingtype" "==" "senior-job-post")) 0 }}
+                                <p style="margin-bottom: 0.5rem;">We’re looking to fill these senior positions as soon as possible:</p>    
+                                <div class="row mrgn-tp-0">
+                                    <ul>
+                                        {{ range $p := (where (where .Pages ".Params.archived" "==" false) ".Params.postingtype" "==" "senior-job-post") }}
+                                            <li><a href={{ .RelPermalink }}>{{ .Title }}</a></li>
+                                        {{ end }}
+                                    </ul>
+                                </div>
+                            {{ end }}
+                            {{ if gt (len (where (where .Pages ".Params.archived" "==" false) ".Params.postingtype" "==" "job-post")) 0 }}
+                                <p style="margin-bottom: 0.5rem;">We’re looking to fill these positions as soon as possible:</p>   
+                                <div class="row mrgn-tp-0">
+                                    <ul>
+                                        {{ range $p := (where (where .Pages ".Params.archived" "==" false) ".Params.postingtype" "==" "job-post") }}
+                                            <li><a href={{ .RelPermalink }}> {{ .Title }}</a></li>
+                                        {{ end }}
+                                    </ul>
+                                </div>
+                            {{ end }}
 
-                            </div>
-                        {{end}}
+                        </div>
+                    {{end}}
 
-                    <p>We’re building a team of talented, passionate, and driven people to work on some of Canada’s <a href="/2017/08/24/picking-our-projects/">biggest service delivery opportunities</a>. From improving the citizenship process to helping veterans access their benefits, this is an opportunity to make a real impact for your country. <a href="/#mission">Learn more about our mission</a>.</p><h3>The team</h3>
-                    <p>Our small, multi-disciplinary teams are made up of developers, designers, researchers, data scientists and product managers. We’re committed to building a team that’s diverse in gender, indigenous heritage, race, disability, age, language and professional background.</p>
-                </div>
-            </div>
-        </section>
-    </div>
-        
-    <div>
-        <section>
-            <div>
-            <div>
-                <h2>The job details</h2>
-        
-                <p>We’re putting together multi-disciplinary project teams that work with departments to prototype, build, and deploy digital service solutions. <a href="/what-we-do/">Learn more about how we work</a>.</p>
-                <p>We're currently hiring in two streams to make this happen:</p>
-                <div>
-                <ul>
-                    <li><a href="#development">Development</a></li>
-                    <li><a href="#prod">Product management</a></li>
-                </ul>
-                </div>
-                
-                <p><strong>Our hiring is a rolling campaign, so you can apply at any time.</strong></p>
-                
-                <p>We're hiring people at all levels of experience. We offer short, medium and long term employment and competitive salaries.</p>
-                <p>Currently, we're hiring in Ottawa but we plan to have people and teams working across the country.</p>
-            </div>
-            </div>
-        </section>
-        </div>
-        
-        <section>
-        <div>
-        <div>
-            <div >
-            <div><h3>What we’re offering</h3></div>
-            <div>
-                <ul>
-                <li><span>An agile, dynamic team where you can work alongside experts from many digital disciplines.</span></li>
-                <li><span>An enabling environment, with access to the modern tools you need to do great work.</span></li>
-                <li><span>A laser-focus on users needs, with the ability to see the impact of your efforts.</span></li>
-                <li><span>Flexible work arrangements that ensure strong work-life balance.</span></li>
-                </ul>
-            </div>
-            </div>
-            <div>
-            <div>
-                <h3>What we’re looking for</h3>
-                <h4>You:</h4>
-            </div>
-            <div>
-                <ul>
-                <li><span>Are passionate about a user’s experience and want to create measurable improvements to service delivery.</span></li>
-                <li><span>Love working in multi-disciplinary teams and with external partners.</span></li>
-                <li><span>Create structure out of ambiguity, and forge a path in new environments.</span></li>
-                <li><span>Are excited about working in the open to benefit a larger community, and about sharing success and failures.</span></li>
-                <li><span>Are curious, and your humility helps you learn and grow.</span></li>
-                <li><span>Are in love with the problem, not the solution.</span></li>
-                </ul>
-            </div>
-            <div>
-                <h4>The mandatory requirements:</h4>
-                <ul>
-                    <li><span>Candidates must be fluent in one of Canada’s two official languages, English or French.</span></li>
-                    <li><span>Preference will be given to Canadian citizens or permanent residents.</span></li>
-                    <li><span>All candidates must be able to obtain a Government of Canada security clearance at either the Reliability or Secret level. We'll help you with this if you're offered a position.</span></li>
-                </ul>
-            </div>
-            </div>
-        </div>
-        </div>
-        </section>
-        
-        <section>
-        <div>
-            <div>
-                <div>
-                <h2>Streams</h2>
-                <h3><a id="development"></a>Development</h3>
-                <p><strong>Front-end, back-end, dev ops</strong></p>
-                <div>
-                <div>
-                    <ul>
-                    <li>You have a passion and skill for delivering high quality code, in languages such as Javascript, PHP, Ruby, Python, SASS, and you’ve worked with technologies like NodeJS, Rails, React, Angular, Serverless.</li>
-                    <li>You’re comfortable building APIs in a RESTful style or with GraphQL.</li>
-                    </ul>
-                </div>
-                <div>
-                    <ul>
-                    <li>You’re used to working on an agile team, in sprints, constantly iterating, and are excited about Test-Driven Development.</li>
-                    <li>You might also contribute to open source projects and share your work on GitHub or other public code repositories.</li>
-                    </ul>
-                </div>
-                </div>
-                </div>
-            </div>
-        <hr>
-        
-            <div>
-            <div>
-                <h3><a id="prod"></a>Product Management</h3>
-                <div>
-                <ul>
-                    <li>You have significant leadership experience and a proven track-record of building and delivering high quality digital products or services, including evolving the vision for a product and managing its development from start to finish.</li>
-                    <li>You have experience balancing user needs and business goals to frame problems and set priorities for delivery teams.</li>
-                </ul>
-                </div>
-                <div>
-                <ul>
-                    <li>You have a background in leading one or more multi-disciplinary teams on several products while working in an agile environment, and in working across the full spectrum of your team to remove roadblocks during the product journey.</li>
-                    <li>You have experience identifying and developing product principles, practices and processes to allow teams to collaboratively build the right thing, the right way.</li>
-                </ul>
-                </div>
-            </div>
-            </div>
-        </div>
-        </section>
-        
-        <div>
-        <section>
-            <div>
-            <div>
-                <h2>The process</h2>
-        
-                <p>Our objective is to find the right fit for both the applicant and the organization. When you apply, here’s what you can generally expect:</p>
-        
-                <div>
-                <div>
-                    <h3>1. Confirmation</h3>
-                    <p>After applying, you’ll get an email to let you know we’ve received your application.</p>
-                    <h3>2. Preliminary call</h3>
-                    <p>If after reviewing your application we’d like to get to know you better, we’ll set up a brief chat to get further information.</p>
-                    <h3>3. Interview and testing</h3>
-                    <p>We may then reach out to you for an in-depth interview, either in-person or by video. This could include an exam component, such as completing a written or technical task.</p>
-                    <h3>4. Reference checks</h3>
-                    <p>We’ll call your references to learn more about your professional experiences.</p>
-                    <h3>5. Meet the team</h3>
-                    <p>Meeting and chatting with the people you’re going to be working with every day, including the CDS leadership, is crucial to confirming the right fit.</p>
-                    <h3>6. Job offer!</h3>
-                    <p>We’ll make the formal offer, and figure out when you can start.</p>
-                </div>
-                </div>
-                <p>If you weren’t offered a job, we would be pleased to discuss your application and why we didn’t see a fit. In some cases, we’ll request to hold on to your application for future reference, as there may be a fit down the road.</p>
-                <p>We are iterating in everything we do! Whether you apply or not, we are happy to receive feedback on what we can do to make the process better, just <a href="mailto:cds-snc@tbs-sct.gc.ca">send us an email</a>.</p>
-            </div>
-            </div>
-        </section>
-    </div>
-        
-    <section>
-        <div>
-            <h2>Apply now</h2>
-            <div>
-                <form role="form" id="contactForm">
-                <div>
-                    <label for="name">Full Name</label>
-                    <input type="text" id="name" aria-required="true" aria-describedby="name-required">
-                    <span id="name-required" style="display: none;">This field is required</span>
-                </div>
-                <div>
-                    <label for="email">Email</label>
-                    <input type="email" id="email" aria-required="true" aria-describedby="email-required">
-                    <span id="email-required" style="display: none;">This field is required</span>
-                </div>
-        
-                <div role="radiogroup" aria-labelledby="stream-label stream-required">
-                    <label id="stream-label">Stream</label>
-                    <div>
-                        <label><input type="radio" name="streams" value="Development">Development</label><br>
-                        <label><input type="radio" name="streams" value="Product management">Product management</label>
-                    </div>
-                    <span id="stream-required" style="display: none;">This field is required</span>
-                </div>
-        
-                <div>
-                    <label for="body">Tell us in 300 words or less why you want to work with us and what we should know about your work samples:</label>
-                    <textarea id="body" rows="5" aria-required="true" aria-describedby="body-required word-count-message"></textarea>
-                    <span id="body-required" style="display: none;">This field is required<br></span>
-                    <span id="word-count-message"><span id="word-count">300</span> words remaining</span>
-                </div>
-                <div>
-                    <label for="work_link">Samples of your work (URLs, please!)</label>
-                    <input type="text" id="work_link">
-                </div>
-                <div class="form-group">
-                    <label for="work_link_2">Additional Work Samples</label>
-                    <input type="text" id="work_link_2">
-                </div>
-                <button type ="submit" id="submitButton"><span class="spinner" id="buttonSpinner"></span>Submit</button>
-                <a href="/legal/privacy-notice">Privacy Notice</a>
-            </form>
+                <p>We’re building a team of talented, passionate, and driven people to work on some of Canada’s <a href="/2017/08/24/picking-our-projects/">biggest service delivery opportunities</a>. From improving the citizenship process to helping veterans access their benefits, this is an opportunity to make a real impact for your country. <a href="/#mission">Learn more about our mission</a>.</p><h3>The team</h3>
+                <p>Our small, multi-disciplinary teams are made up of developers, designers, researchers, data scientists and product managers. We’re committed to building a team that’s diverse in gender, indigenous heritage, race, disability, age, language and professional background.</p>
             </div>
         </div>
     </section>
-</html>
+</div>
+
+{{ .Content }}
 
 {{ end }}
