--- a/layouts/section/contact.html
+++ b/layouts/section/contact.html
@@ -1,19 +1,16 @@
-<!DOCTYPE html>
-<html lang="en-US">
-  {{ partial "langSwitch" . }}
-  {{ partial "head.html" . }}
-
-  <section>
-      <h2>Connect with us!</h2>
-    
-      <div>
-        {{ partial "contact-info.html" . }}
-      </div>
-        
-    </section>
-    <section>
-      <a name="mailing-list"></a>
-      {{ $path := printf "%s%s%s" "mailing-list." (string ($.Site.Language)) ".html" }}
-      {{ partial  $path }}
-    </section>
+{{define "main"}}
+<section class="section page-contact page--outer-container-padding">
+    <h2 class="section--title">Connect with us!</h2>
+  
+    <div class="contact-info-container">
+      {{ partial "contact-info.html" . }}
+    </div>
+      
+  </section>
+  <section class="section section--mailing-list no-bg">
+    <a name="mailing-list"></a>
+    {{ $path := printf "%s%s%s" "mailing-list." (string ($.Site.Language)) ".html" }}
+    {{ partial  $path }}
+  </section>
 </html>
+{{ end }}
