Added footer and some other bilingual fixes

--- a/assets/sass/cds/_nav.scss
+++ b/assets/sass/cds/_nav.scss
@@ -80,10 +80,10 @@
 
   // BILINGUAL SPECIFIC CDS LOGO
   .fr & {
-    background-image: url("img/cds/cds-logo-fr.svg") !important;
+    background-image: url("../img/cds/cds-logo-fr.svg") !important;
 
     @include mobile_only {
-      background-image: url("img/cds/cds-logo-fr-abbrev.svg") !important;
+      background-image: url("../img/cds/cds-logo-fr-abbrev.svg") !important;
     }
   }
 
