--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -16,7 +16,7 @@
 
 
         <!-- workaround to get hugo pipes working with multihost: https://discourse.gohugo.io/t/problem-getting-hugo-pipes-working-with-multiple-languages/13477 -->
-        {{- $target := printf "%s/sass/cds.css" .Lang }}
+        {{- $target := printf "/sass/cds.css" }}
         {{- $css := resources.Get "sass/cds.scss" | toCSS (dict "targetPath" $target)}}
         <link rel="stylesheet" href="{{ .Site.BaseURL }}{{ print $css.RelPermalink | replaceRE "^/[a-z]{2}/(.*)" "$1" }}" media="screen" />
 
@@ -124,7 +124,7 @@
     {{ block "footer" . }}
     
     <footer role="contentinfo" id="wb-info">
-        <!-- toto include footer -->
+        {{ partial "footer.html" }}
     </footer>
     <!--[if gte IE 9 | !IE ]><!-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
