--- a/layouts/section/page.html
+++ b/layouts/section/page.html
@@ -1,6 +1,8 @@
 {{ define "main" }}
     <main role="main" property="mainContentOfPage">
-        <section id="wb-cont">
-            {{ .Content }}
-        </section>
+        <div class="container">
+            <section class="content">
+                {{ .Content }}
+            </section>
+        </div>
 {{ end }}
