--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -11,7 +11,7 @@
         <meta name="description" content="{{ .Params.description }}">
         <!-- Meta data-->
         <!--[if gte IE 9 | !IE ]><!-->
-        <link href="/assets/lib/gcweb-dist/GCWeb/assets/favicon.ico" rel="icon" type="image/x-icon">
+        <link href="/lib/gcweb-dist/GCWeb/assets/favicon.ico" rel="icon" type="image/x-icon">
         <link rel="stylesheet" href="/lib/gcweb-dist/GCWeb/css/theme.min.css">
 
 
@@ -52,9 +52,7 @@
         </li>
     </ul>
     <header role="banner">
-    {{ block "fip" . }}
-        {{ partial "fip.html" }}
-    {{ end }}
+    {{ partial "fip.html" . }}
 
     {{ block "menu" . }}
         <nav role="navigation" id="wb-sm" data-trgt="mb-pnl" class="cds-menu" typeof="SiteNavigationElement">
