fix blog posts on website links

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -54,7 +54,7 @@
         
                     {{ range first 4 $posts }}
                     <div class="col-xs-12 col-sm-4 col-md-3">
-                        <a class="post" href="{{ .Params.url }}">
+                        <a class="post" href="{{ .RelPermalink }}">
                             <div class="image" style="background-image:url('/img/cds/{{ .Params.image }}')"></div>
                             <div class="text">
                                 <h3>{{ .Params.title }}</h3>
