--- a/layouts/index.html
+++ b/layouts/index.html
@@ -37,13 +37,7 @@
         </div>
         </header>
 {{ end }}
-{{ define "main" }}
-    <main role="main" property="mainContentOfPage">
-        <section id="wb-cont">
-            {{ .Content }}
-        </section>
-    </main>
-
+{{ define "index" }}
     <section class="section section--featured-blogposts">
             <div class="container">
                 <h2 class="section--title">Featured blog posts</h2>
