--- a/layouts/section/products.html
+++ b/layouts/section/products.html
@@ -1,5 +1,7 @@
 {{ define "main" }}    
-
-  {{ .Content }}
-
+  <div class="container">
+      <section class="content">
+          {{ .Content }}
+      </section>
+  </div>
 {{end}}
