--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -2,9 +2,8 @@
   {{ with .Params.imagealt }}
     <div class="page-banner" role="img" aria-label="{{ .Params.imagealt }}" style="background-image: url('/img/cds/{{ .Params.image }}')"></div>
   {{ else }}
-  <div class="page-banner" style="background-image:url('/img/cds/{{ .Params.image }}')">
+  <div class="page-banner" style="background-image:url('/img/cds/{{ .Params.image }}')"></div>
   {{ end }}
-</header>
 {{end}}
 
 {{define "main"}}  
