French engagement stylesheet, updated i18n translations, and analytics partial

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -148,7 +148,7 @@
     <script src="/js/cds-app.js"></script>
     
     <!-- Google Analytics -->
-    <!-- TODO -->
+        {{ partial "analytics.html" }}
     {{ end }}
     </body>
     </html>
