--- a/layouts/engagement/default.html
+++ b/layouts/engagement/default.html
@@ -134,7 +134,7 @@
 <script src="/bootstrap-affix-scrollspy.js"></script>
 
 <!-- Google Analytics -->
-<!-- TODO -->
+{{ partial "analytics.html" }}
 
 </body>
 </html>
