--- a/layouts/section/work-with-us.en.html
+++ b/layouts/section/work-with-us.en.html
@@ -6,28 +6,26 @@
                 <h2 class="section--title">Join CDS</h2>
                     {{ if gt (len (where .Pages ".Params.archived" "==" false)) 0 }}
                         <div class="cell-background">
-                            <h4>Applications open for a limited time</h4>
-                            {{ if gt (len (where (where .Pages ".Params.archived" "==" false) ".Params.postingtype" "==" "senior-job-post")) 0 }}
-                                <p style="margin-bottom: 0.5rem;">We’re looking to fill these senior positions as soon as possible:</p>    
+                            <p><strong>Applications open for a limited time</strong></p>
+                            {{ if gt (len (where .Pages ".Params.archived" "==" false)) 0 }}
+                                <p style="margin-bottom: 0.5rem;">We’re looking to fill these positions as soon as possible:</p>    
                                 <div class="row mrgn-tp-0">
                                     <ul>
-                                        {{ range $p := (where (where .Pages ".Params.archived" "==" false) ".Params.postingtype" "==" "senior-job-post") }}
+                                        {{ range $p := (where .Pages ".Params.archived" "==" false) }}
                                             <li><a href={{ .RelPermalink }}>{{ .Title }}</a></li>
                                         {{ end }}
                                     </ul>
                                 </div>
                             {{ end }}
-                            {{ if gt (len (where (where .Pages ".Params.archived" "==" false) ".Params.postingtype" "==" "job-post")) 0 }}
-                                <p style="margin-bottom: 0.5rem;">We’re looking to fill these positions as soon as possible:</p>   
-                                <div class="row mrgn-tp-0">
-                                    <ul>
-                                        {{ range $p := (where (where .Pages ".Params.archived" "==" false) ".Params.postingtype" "==" "job-post") }}
-                                            <li><a href={{ .RelPermalink }}> {{ .Title }}</a></li>
-                                        {{ end }}
-                                    </ul>
-                                </div>
-                            {{ end }}
-
+                            <p>We're currently hiring in four streams:</p>
+                            <div class="row mrgn-tp-0">
+                                <ul>
+                                    <li><a href="#comms">Communications and engagement</a></li>
+                                    <li><a href="#design">Design</a></li>
+                                    <li><a href="#development">Development</a></li>
+                                    <li><a href="#prod">Product management</a></li>
+                                </ul>
+                            </div>
                         </div>
                     {{end}}
 
