--- a/layouts/section/work-with-us.fr.html
+++ b/layouts/section/work-with-us.fr.html
@@ -6,27 +6,26 @@
                 <h2 class="section--title">Travaillez au SNC</h2>
                 {{ if gt (len (where .Pages ".Params.archived" "==" false)) 0 }}
                     <div class="cell-background">
-                        <h4>Candidatures possibles pour un temps limité</h4>
-                        {{ if gt (len (where (where .Pages ".Params.archived" "==" false) ".Params.postingtype" "==" "senior-job-post")) 0 }}
-                            <p style="margin-bottom: 0.5rem;">Nous souhaitons combler ces postes supérieurs le plus tôt possible&nbsp;:</p>
+                        <p><strong>Candidatures possibles pour un temps limité</strong></p>
+                        {{ if gt (len (where .Pages ".Params.archived" "==" false)) 0 }}
+                            <p style="margin-bottom: 0.5rem;">Nous souhaitons combler ces postes le plus tôt possible&nbsp;:</p>
                             <div class="row mrgn-tp-0">
                                 <ul>
-                                    {{ range $p := (where (where .Pages ".Params.archived" "==" false) ".Params.postingtype" "==" "senior-job-post") }}
+                                    {{ range $p := (where .Pages ".Params.archived" "==" false)}}
                                         <li><a href={{ .RelPermalink }}>{{ .Title }}</a></li>
                                     {{ end }}
                                 </ul>
                             </div>
                         {{ end }}
-                        {{ if gt (len (where (where .Pages ".Params.archived" "==" false) ".Params.postingtype" "==" "job-post")) 0 }}
-                            <p style="margin-bottom: 0.5rem;">Nous souhaitons combler ces postes le plus tôt possible&nbsp;:</p>
-                            <div class="row mrgn-tp-0">
-                                <ul>
-                                    {{ range $p := (where (where .Pages ".Params.archived" "==" false) ".Params.postingtype" "==" "job-post") }}
-                                        <li><a href={{ .RelPermalink }}> {{ .Title }}</a></li>
-                                    {{ end }}
-                                </ul>
-                            </div>
-                        {{ end }}
+                        <p>Nous embauchons dans quatre volets&nbsp;:</p>
+                        <div class="row mrgn-tp-0">
+                            <ul>
+                                <li><a href="#comms">Communications et Mobilisation</a></li>
+                                <li><a href="#design">Conception</a></li>
+                                <li><a href="#development">Développement</a></li>
+                                <li><a href="#prod">Gestion de produit</a></li>
+                            </ul>
+                        </div>
                     </div>
                 {{end}}
                 <p>Le SNC constitue une équipe de personnes talentueuses, passionnées et résolues à relever les principaux <a href="/2017/08/24/choisir-nos-projets/">défis de prestation de services</a> au Canada. Qu’il s’agisse d’améliorer le processus d’immigration ou d’aider les anciens combattants à recevoir leurs prestations, saisissez l’occasion d’avoir un véritable impact pour votre pays. <a href="/#mission">Pour en savoir plus sur notre mission</a>.</p>
